# autoencoder_for_entity_resolution

./: MANIFEST.in  README.md  setup.cfg
autoencoder/: start_pipeline_run.py
autoencoder/classifier/: dataloader_neural_net_classifier.py  evaluate_catbost.py  evaluate_neural_net.py  feed_data_through_autoencoder.py  model_catboost.py  model_neural_net.py
autoencoder/config/: config.yml
autoencoder/enums/: column_names.py
autoencoder/metrics/: metricsbag.py
autoencoder/models/: fasttext__cnn_autoencoder.py  fasttext__rnn__autoencoder.py  fasttext__simple_autoencoder.py  wordpiece_cnn_autoencoder.py  wordpiece_rnn_autoencoder.py  wordpiece_simple_autoencoder.py
autoencoder/pipelines/: ft__cnn__cbc.py  ft__cnn__nnc.py  ft__rnn__nnc.py  ft__sa__cbc.py  ft__sa__nnc.py  ft_vae_cnn_nnc.py  wp__cnn__nnc.py  wp__cnn_cbc.py  wp__rnn__nnc.py  wp__sa__cbc.py  wp__sa__nnc.py
autoencoder/preprocessing/: clean_data.py  get_only_matches_from_x_train.py  split_data.py
autoencoder/pytorch_dataloader/: mp_fasttext.py  mp_wordpiece.py
autoencoder/pytorch_datasets/: mp_fasttext.py  mp_wordpiece.py
autoencoder/tasks/: base_task.py  classifier_catboost.py  classifier_neural_net.py  fasttext_embedding.py  feed_data_through_autoencoder.py  preprocessing.py  train_autoencoder.py  wordpiece_tokenizer.py
autoencoder/tokenizer_and_word_embeddings/: make_fasttext_embeddings.py  wordpiece_tokenizer.py
autoencoder/trainer/: autoencoder_trainer.py  classifier_trainer.py  vae_trainer.py
autoencoder/utils/: get_resources.py
