[metadata]
name = autoencoder
version = file: version.txt
author = john doe
author_email = example@example.com
description = Autoencoder for product matching
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
        pandas
        numpy ==1.21.6
        catboost ==1.0.6
        joblib ==1.1.0
        gensim ==4.2.0
        tables==3.6.1
        mlflow==1.30.0
        luigi==3.1.0
        tokenizers==0.13.*
        torch==1.12.*


[options.packages.find]
exclude = 
    tests*
